--- a/src/com/musicalmanagementsystem/gui/startPage.fxml
+++ b/src/com/musicalmanagementsystem/gui/startPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -74,7 +75,10 @@
                               </Pane>
                               <Pane layoutX="14.0" layoutY="440.0" prefHeight="96.0" prefWidth="115.0">
                                  <children>
-                                    <Hyperlink id="donateHyperlink" fx:id="linkToDonatePage" layoutX="-1.0" prefHeight="96.0" prefWidth="118.0" style="-fx-background-image: url(&quot;donateHeart.png&quot;); -fx-background-size: stretch;" styleClass="donateHyperlink" stylesheets="@style.css" />
+                                    <Hyperlink id="donateHyperlink" fx:id="linkToDonatePage" layoutX="-1.0" prefHeight="96.0" prefWidth="118.0" style="-fx-background-image: url(&quot;donateHeart.png&quot;); -fx-background-size: stretch;" styleClass="donateHyperlink" stylesheets="@style.css">
+                                       <graphic>
+                                          <Label fx:id="donateHeartLabel" prefHeight="97.0" prefWidth="115.0" />
+                                       </graphic></Hyperlink>
                                  </children>
                               </Pane>
                            </children>
